分组dfs或并查集题目

--- a/_posts/01_Algorithms/2025-04-21-图论.md
+++ b/_posts/01_Algorithms/2025-04-21-图论.md
@@ -168,12 +168,13 @@ def bfs(graph, u):
 
 ### 经典例题
 
-| 题号   | 题目                                                                                                    | 标签                 |
-| ---- | ----------------------------------------------------------------------------------------------------- | ------------------ |
-| 3619 | [可以被 K 整除的岛屿总价值数目](https://leetcode.cn/problems/count-islands-with-total-value-divisible-by-k/)       | DFS / 数论 / 提升题 |
-| 3607 | [电网维护](https://leetcode.cn/problems/power-grid-maintenance/)                                          | DFS / 最小生成树 / 提升题    |
-| 3620 | [恢复网络路径](https://leetcode.cn/problems/network-recovery-pathways/)                                     | DFS / 拓扑排序 / 提升题     |
-| 3629 | [通过质数传送到达终点的最少跳跃次数](https://leetcode.cn/problems/minimum-jumps-to-reach-end-via-prime-teleportation/) | BFS / 数论 / 提升题 |
+| 题号   | 题目                                                                                                    | 标签                  |
+| ---- | ----------------------------------------------------------------------------------------------------- |---------------------|
+| 3619 | [可以被 K 整除的岛屿总价值数目](https://leetcode.cn/problems/count-islands-with-total-value-divisible-by-k/)       | DFS / 数论 / 提升题      |
+| 3607 | [电网维护](https://leetcode.cn/problems/power-grid-maintenance/)                                          | DFS / 最小生成树 / 提升题   |
+| 3620 | [恢复网络路径](https://leetcode.cn/problems/network-recovery-pathways/)                                     | DFS / 拓扑排序 / 提升题    |
+| 3629 | [通过质数传送到达终点的最少跳跃次数](https://leetcode.cn/problems/minimum-jumps-to-reach-end-via-prime-teleportation/) | BFS / 数论 / 提升题      |
+| 3068 | [包含 K 个连通分量需要的最小时间](https://leetcode.cn/problems/minimum-time-for-k-connected-components/) | DFS / 分组 |
 
 ---
 
