--- a/_posts/02_DataStructures/2024-06-23-并查集.md
+++ b/_posts/02_DataStructures/2024-06-23-并查集.md
@@ -97,6 +97,10 @@ class UnionFind:
 ```
 
 ### 经典例题
-- [3608. 包含 K 个连通分量需要的最小时间](https://leetcode.cn/problems/minimum-time-for-k-connected-components/)
+
+| 题号 | 题目 | 标签              |
+| --- | --- |-----------------|
+| 2092 | [找出知晓秘密的所有专家](https://leetcode.cn/problems/find-all-people-with-secret/) | 并查集 / 图论 / 排序   |
+| 3068 | [包含 K 个连通分量需要的最小时间](https://leetcode.cn/problems/minimum-time-for-k-connected-components/) | 并查集 / 分组 / 撤销合并 |
 
 ---
