--- a/_posts/01_Algorithms/2025-03-21-线性DP.md
+++ b/_posts/01_Algorithms/2025-03-21-线性DP.md
@@ -11,7 +11,7 @@ layout: post
 
 ---
 
-## 概念理解
+## 基本概念
 
 **线性 DP（Linear DP）** 指的是：
 
@@ -26,8 +26,6 @@ layout: post
 * `dp[i] = f(dp[i-1], dp[i-2], ..., dp[i-k])`
 
 ---
-
-## 核心思路框架
 
 线性 DP 的四步法：
 
@@ -46,7 +44,6 @@ layout: post
 | **前缀/后缀优化** | 通过前缀和、单调栈等加速转移             |
 | **排序 + 压缩** | 当状态与“值”相关时，先排序并压缩（如值域打家劫舍） |
 | **转移剪枝**    | 当不可能更新更优结果时提前跳出            |
-
 
 ---
 
