--- a/_posts/02_DataStructures/2024-01-23-堆(优先级队列).md
+++ b/_posts/02_DataStructures/2024-01-23-堆(优先级队列).md
@@ -313,11 +313,12 @@ class MedianFinder:
 ### 经典例题
 
 | 题号   | 题目                                                                                                | 标签              |
-| ---- | ------------------------------------------------------------------------------------------------- | --------------- |
-| 1353 | [最多可以参加的会议数目](https://leetcode.cn/problems/maximum-number-of-events-that-can-be-attended/)        | 贪心 / 堆 / 模板题    |
-| 2163 | [删除元素后和的最小差值](https://leetcode.cn/problems/minimum-difference-in-sums-after-removal-of-elements/) | 贪心 / 堆 / 提升题    |
-| 2349 | [设计数字容器系统](https://leetcode.cn/problems/design-a-number-container-system/)                        | 懒删除堆 / 设计 / 提升题 |
-| 3408 | [设计任务管理器](https://leetcode.cn/problems/design-task-manager/)                                      | 懒删除堆 / 设计 / 提升题 |
-| 295  | [数据流的中位数](https://leetcode.cn/problems/find-median-from-data-stream/)                             | 双堆 / 数据流 / 模板题  |
+| ---- | ------------------------------------------------------------------------------------------------- |-----------------|
+| 1353 | [最多可以参加的会议数目](https://leetcode.cn/problems/maximum-number-of-events-that-can-be-attended/)        | 贪心 / 堆     |
+| 2163 | [删除元素后和的最小差值](https://leetcode.cn/problems/minimum-difference-in-sums-after-removal-of-elements/) | 贪心 / 堆    |
+| 2349 | [设计数字容器系统](https://leetcode.cn/problems/design-a-number-container-system/)                        | 懒删除堆 / 设计 |
+| 3408 | [设计任务管理器](https://leetcode.cn/problems/design-task-manager/)                                      | 懒删除堆 / 设计 |
+| 295  | [数据流的中位数](https://leetcode.cn/problems/find-median-from-data-stream/)                             | 双堆 / 数据流   |
+| 2402 | [会议室 III](https://leetcode.cn/problems/meeting-rooms-iii/) | 双堆 / 模拟   |
 
 ---
