--- a/_posts/03_ProgrammingTips/2025-06-01-Pythonic编程.md
+++ b/_posts/03_ProgrammingTips/2025-06-01-Pythonic编程.md
@@ -9,7 +9,7 @@ layout: post
 
 Pythonic（符合 Python 风格） 的技巧可以让代码更简洁、优雅、高效。
 
-| 🍭 语法糖           | 💡 示例                        | 🧵 等价写法（或传统写法）                    |
+| 语法糖           | 示例                        | 等价写法（或传统写法）                    |
 | ---------------- | ---------------------------- | --------------------------------- |
 | **条件表达式（三元表达式）** | `x = a if cond else b`       | `if cond: x = a else: x = b`      |
 | **列表推导式**        | `[x*x for x in range(5)]`    | 传统 for 循环逐个 `append()`            |
@@ -46,14 +46,14 @@ a, b, c = nums # 正确
 
 在 Python 的语法规则中，* 解包符号不能单独出现在赋值右边，它只能出现在 函数调用、构造新容器、或赋值左边。
 ```python
-# ✅ 语法允许的情况
-a, b, c = nums         # ✅ 正常解包
-f(*nums)               # ✅ 用在函数参数中
-[a, *b]                # ✅ 用在列表构造中
-a, *b = nums           # ✅ 用在赋值左边
+#  语法允许的情况
+a, b, c = nums         #  正常解包
+f(*nums)               #  用在函数参数中
+[a, *b]                #  用在列表构造中
+a, *b = nums           #  用在赋值左边
 
-# ❌ 非法
-a, b, c = *nums        # ❌ SyntaxError
+#  非法
+a, b, c = *nums        #  SyntaxError
 # SyntaxError: can't use starred expression here
 ```
 
@@ -259,13 +259,40 @@ else:
 
 ---
 
+## pairwise语法
+
+`pairwise`，相邻元素对生成器，是处理“相邻关系”的标准工具。 非常适合直接配合 `all()` / `any()`。
+
+```python
+from itertools import pairwise
+
+list(pairwise([1, 2, 3, 4]))
+# [(1, 2), (2, 3), (3, 4)]
+```
+
+**边界行为：** 长度 < 2 → 没有输出
+
+```python
+list(pairwise([]))     # []
+list(pairwise([x]))    # []
+```
+
+
+常见用法：
+
+* 判断递增 / 递减
+* 相邻差分
+* 区间 / 距离计算
+* 字符串相邻处理
+* 路径 / 边遍历
+
+---
+
 ## iter/next用法
 
 `iter()` 和 `next()` 在 Python 中是构建 **迭代器模式** 的核心，很多看似“自动”的语法糖（比如 `for` 循环、生成器）其实背后都用到它们。
 
 ---
-
-**底层原理**
 
 虽然我们平时写：
 
@@ -288,11 +315,7 @@ while True:
 
 ---
 
-**常用场景：**
-
-**手动控制迭代过程**
-
-当你不想用 `for`，而是一步步获取数据时：
+**手动控制迭代过程**：当你不想用 `for`，而是一步步获取数据时。
 
 ```python
 nums = [10, 20, 30]
@@ -307,33 +330,7 @@ print(next(it))  # 20
 
 ---
 
-**从流/文件中逐行读取（懒加载）**
-
-```python
-with open("data.txt") as f:
-    it = iter(f)   # 文件对象本身就是迭代器
-    for line in it:
-        print(line.strip())
-```
-
-> 用处：大文件处理，避免一次性读入内存。
-
----
-
-**`iter(callable, sentinel)` 模式**
-
-```python
-# 从输入读取，直到遇到 "quit"
-it = iter(input, "quit")
-for line in it:
-    print("输入：", line)
-```
-
-> 用处：**代替 while True + break**，在“读到某个终止值时停止”。
-
----
-
-**生成器表达式 + `next()`（快速取值）**
+**生成器表达式 + `next()`（快速取值）**：从序列里快速找到**第一个满足条件的值**。
 
 ```python
 nums = [0, 4, 0, 5, 6]
@@ -342,11 +339,9 @@ first_nonzero = next(x for x in nums if x != 0)
 print(first_nonzero)  # 4
 ```
 
-> 用处：从序列里快速找到**第一个满足条件的值**。
-
 ---
 
-**`next(it, default)` 防止异常**
+**`next(it, default)`**：想安全取值，不想写 try/except。
 
 ```python
 it = iter([1, 2])
@@ -354,8 +349,6 @@ print(next(it, None))  # 1
 print(next(it, None))  # 2
 print(next(it, None))  # None (不会抛 StopIteration)
 ```
-
-> 用处：想安全取值，不想写 try/except。
 
 ---
 
