--- a/_posts/01_Algorithms/2025-03-23-背包DP.md
+++ b/_posts/01_Algorithms/2025-03-23-背包DP.md
@@ -372,6 +372,7 @@ print(knapsack_unbounded(n - 1, W))  # 输出 15
 | ---- | ----------------------------------------------------------- | ------------------------ |
 | 322  | [零钱兑换](https://leetcode.cn/problems/coin-change/)           | 模板题 / 最小硬币数       |
 | 518  | [零钱兑换 II](https://leetcode.cn/problems/coin-change-ii/)     | 模板题 / 方案数统计       |
+| 279 | [完全平方数](https://leetcode.cn/problems/perfect-squares/) | 模板题 |
 | 3592 | [硬币面值还原](https://leetcode.cn/problems/inverse-coin-change/) | 陷阱题 / 逆向思维 / 组合限制 |
 
 ---
