--- a/_posts/01_Algorithms/2025-04-21-图论.md
+++ b/_posts/01_Algorithms/2025-04-21-图论.md
@@ -469,19 +469,19 @@ def topological_sort_kahn(graph, n):
 > 图论中的松弛（Relaxation）是指：尝试通过某条边更新目标节点的最短路径估计，如果更短就更新。
 
 **流程**
-定义 $g[i][j]$ 表示节点 i 到节点 j 这条边的边权。如果没有 i 到 j 的边，则 $g[i][j]=∞$。
-定义 $dis[i]$ 表示起点 k 到节点 i 的最短路长度，一开始 $dis[k]=0$，其余 $dis[i]=∞$ 表示尚未计算出。
+定义 $g[i][j]$ 表示节点 $i$ 到节点 $j$ 这条边的边权。如果没有 $i$ 到 $j$ 的边，则 $g[i][j]=∞$。
+定义 $dis[i]$ 表示起点 $k$ 到节点 $i$ 的最短路长度，一开始 $dis[k]=0$，其余 $dis[i]=∞$ 表示尚未计算出。
 
-我们的目标是计算出最终的 dis 数组。
-* 首先更新起点 k 到其邻居 y 的最短路，即更新 $dis[y] 为 g[k][y]$。
-* 然后取除了起点 k 以外的 $dis[i]$ 的最小值，假设最小值对应的节点是 3。
+我们的目标是计算出最终的 $dis$ 数组。
+* 首先更新起点 $k$ 到其邻居 $y$ 的最短路，即更新 $dis[y]$ 为 $g[k][y]$。
+* 然后取除了起点 $k$ 以外的 $dis[i]$ 的最小值，假设最小值对应的节点是 $3$。
 
-> 此时可以断言：$dis[3]$ 已经是 k 到 3 的最短路长度，不可能有其它 k 到 3 的路径更短！
-> 反证法：假设存在更短的路径，那我们一定会从 k 出发经过一个点 u，它的 $dis[u]$ 比 $dis[3]$ 还要小，然后再经过一些边到达 3，得到更小的 $dis[3]$。
-> 但 $dis[3]$ 已经是最小的了，并且图中没有负数边权，所以 u 是不存在的，矛盾。故原命题成立，此时我们得到了 $dis[3]$ 的最终值。
+> 此时可以断言：$dis[3]$ 已经是 $k$ 到 $3$ 的最短路长度，不可能有其它 $k$ 到 $3$ 的路径更短！
+> 反证法：假设存在更短的路径，那我们一定会从 $k$ 出发经过一个点 $u$，它的 $dis[u]$ 比 $dis[3]$ 还要小，然后再经过一些边到达 $3$，得到更小的 $dis[3]$。
+> 但 $dis[3]$ 已经是最小的了，并且图中没有负数边权，所以 $u$ 是不存在的，矛盾。故原命题成立，此时我们得到了 $dis[3]$ 的最终值。
 
-* 用节点 3 到其邻居 y 的边权 $g[3][y]$ 更新 $dis[y]$：如果 $dis[3]+g[3][y]<dis[y]$，那么更新 $dis[y]$ 为 $dis[3]+g[3][y]$，否则不更新。
-* 然后取除了节点 k,3 以外的 $dis[i]$ 的最小值，重复上述过程。
+* 用节点 $3$ 到其邻居 $y$ 的边权 $g[3][y]$ 更新 $dis[y]$：如果 $dis[3]+g[3][y]<dis[y]$，那么更新 $dis[y]$ 为 $dis[3]+g[3][y]$，否则不更新。
+* 然后取除了节点 $k$, $3$ 以外的 $dis[i]$ 的最小值，重复上述过程。
 
 由数学归纳法可知，这一做法可以得到每个点的最短路。当所有点的最短路都已确定时，算法结束。
 [参考链接](https://leetcode.cn/problems/network-delay-time/solutions/2668220/liang-chong-dijkstra-xie-fa-fu-ti-dan-py-ooe8/)
@@ -491,23 +491,26 @@ def topological_sort_kahn(graph, n):
 使用**小根堆（优先队列）** 极大提升了查找“当前最短路径点”的效率，从而显著优化整体时间复杂度。
 ```python
 import heapq
+from math import inf
 
 def dijkstra(graph, u):
     n = len(graph)
-    dist = [float('inf')] * n
+    dist = [inf] * n
     dist[u] = 0
-    heap = [(0, u)]  # (dist, node)
+    q = [(0, u)]  # (dist, node)
 
-    while heap:
-        d, u = heapq.heappop(heap)
+    while q:
+        d, u = heapq.heappop(q)
+        
         # if u == target:
         #     return d  # 如果只需要找到 target，可直接返回最短距离
+        
         if d > dist[u]: # u 已经处理过。之前的d大于当前的dist[u]，故弹出的该节点无需处理
             continue
         for v, w in graph[u]:  # v: neighbor, w: weight
             if dist[v] > dist[u] + w:
                 dist[v] = dist[u] + w
-                heapq.heappush(heap, (dist[v], v))
+                heapq.heappush(q, (dist[v], v))
     return dist
 ```
 
@@ -904,10 +907,12 @@ def find_euler_directed(graph):
 
 ### 经典例题
 
-| 题号   | 题目                                                                                                 | 标签              |
-| ---- | -------------------------------------------------------------------------------------------------- |-----------------|
-| 778  | [水位上升的泳池中游泳](https://leetcode.cn/problems/swim-in-rising-water/)                                   | 最短路 / 二分 + BFS  |
-| 3604 | [有向图中到达终点的最少时间](https://leetcode.cn/problems/minimum-time-to-reach-destination-in-directed-graph/) | 最短路 / Dijkstra  |
+| 题号   | 题目                                                                                                 | 标签                    |
+| ---- | -------------------------------------------------------------------------------------------------- |-----------------------|
+| 778  | [水位上升的泳池中游泳](https://leetcode.cn/problems/swim-in-rising-water/)                                   | 最短路径 / 二分 + BFS       |
+| 743  | [网络延迟时间](https://leetcode.cn/problems/network-delay-time/) | 最短路径 / Dijkstra / 模板题 |
+| 3604 | [有向图中到达终点的最少时间](https://leetcode.cn/problems/minimum-time-to-reach-destination-in-directed-graph/) | 最短路径 / Dijkstra       |
+| 3650 | [边反转的最小路径总成本](https://leetcode.cn/problems/minimum-total-cost-of-path-with-edge-reversals/) | 最短路径 / 干扰题 |
 
 ---
 
