--- a/_posts/02_DataStructures/2024-01-02-二叉树.md
+++ b/_posts/02_DataStructures/2024-01-02-二叉树.md
@@ -284,9 +284,15 @@ class Solution:
 ---
 
 ### 经典例题
-- [98. 验证二叉搜索树](https://leetcode.cn/problems/validate-binary-search-tree/)
-- [230. 二叉搜索树中第 K 小的元素](https://leetcode.cn/problems/kth-smallest-element-in-a-bst/)
-- [199. 二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/)
+
+| 题号   | 题目                                                                                  | 标签                 |
+| ---- | ----------------------------------------------------------------------------------- | ------------------ |
+| 98   | [验证二叉搜索树](https://leetcode.cn/problems/validate-binary-search-tree/)                | 中序遍历 / 模板题 |
+| 230  | [二叉搜索树中第 K 小的元素](https://leetcode.cn/problems/kth-smallest-element-in-a-bst/)       | 中序遍历 / 提升题 |
+| 199  | [二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/)                | BFS / 层序遍历   |
+| 1339 | [分裂二叉树的最大乘积](https://leetcode.cn/problems/maximum-product-of-splitted-binary-tree/) | 后序遍历 / 子树和   |
+| 236 | [二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/)        | 后序遍历 / LCA 经典模板 |
+| 865 | [具有所有最深节点的最小子树](https://leetcode.cn/problems/smallest-subtree-with-all-the-deepest-nodes/) | 后序遍历 / 深度信息汇总   |
 
 ---
 
@@ -400,17 +406,15 @@ class Solution:
 
 ### 经典例题
 
-- [101. 对称二叉树](https://leetcode.cn/problems/symmetric-tree/)
-- [114. 二叉树展开为链表](https://leetcode.cn/problems/flatten-binary-tree-to-linked-list/)
-- [226. 翻转二叉树](https://leetcode.cn/problems/invert-binary-treea)
-
-**二叉树的构造：**
-通常是根据遍历结果进行递归/分治。
-
-- [108. 将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/)
-- [105. 从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
-- [106. 从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/)
-- [889. 根据前序和后序遍历构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/)
+| 题号  | 题目                                                                           | 核心考点              |
+| --- | ---------------------------------------------------------------------------- | ----------------- |
+| 101 | [对称二叉树](https://leetcode.cn/problems/symmetric-tree/)                        | 递归 / 镜像判断   |
+| 114 | [二叉树展开为链表](https://leetcode.cn/problems/flatten-binary-tree-to-linked-list/) | 后序遍历 / 指针重排 |
+| 226 | [翻转二叉树](https://leetcode.cn/problems/invert-binary-tree/)                    | 递归 / 结构交换   |
+| 108 | [将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/)                   | 二叉树构造 / 分治 / BST 性质    |
+| 105 | [从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)  | 二叉树构造 / 前序 + 中序 / 递归分治 |
+| 106 | [从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/) | 二叉树构造 / 中序 + 后序 / 递归分治 |
+| 889 | [根据前序和后序遍历构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/) | 二叉树构造 / 前序 + 后序 / 不唯一性 |
 
 ---
 
@@ -557,7 +561,11 @@ class Solution:
 ---
 
 ### 经典例题
-- [437. 路径总和 III](https://leetcode.cn/problems/path-sum-iii/)
+
+| 题号  | 题目                                                     | 核心考点                     |
+| --- | ------------------------------------------------------ | ------------------------ |
+| 437 | [路径总和 III](https://leetcode.cn/problems/path-sum-iii/) | 前缀和思想 / DFS / 路径统计 |
+
 
 ---
 
@@ -818,9 +826,11 @@ class Solution:
 ---
 
 ### 经典例题
-- [2246. 相邻字符不同的最长路径](https://leetcode.cn/problems/longest-path-with-different-adjacent-characters/)
-- [687. 最长同值路径](https://leetcode.cn/problems/longest-univalue-path/)
-- [1617. 统计子树中城市之间最大距离](https://leetcode.cn/problems/count-subtrees-with-max-distance-between-cities/)
-- [2539. 最大价值和与最小价值和的差值](https://leetcode.cn/problems/difference-between-maximum-and-minimum-price-sum/)
+| 题号   | 题目                                                                                               | 核心考点                  |
+| ---- | ------------------------------------------------------------------------------------------------ | --------------------- |
+| 2246 | [相邻字符不同的最长路径](https://leetcode.cn/problems/longest-path-with-different-adjacent-characters/)     | 后序遍历 / 路径合并（最长路径） |
+| 687  | [最长同值路径](https://leetcode.cn/problems/longest-univalue-path/)                                    | 后序遍历 / 同值路径统计       |
+| 1617 | [统计子树中城市之间最大距离](https://leetcode.cn/problems/count-subtrees-with-max-distance-between-cities/)   | 状态枚举 / 子树直径 / 提升题     |
+| 2539 | [最大价值和与最小价值和的差值](https://leetcode.cn/problems/difference-between-maximum-and-minimum-price-sum/) | 两次 DFS / 最大最小路径和 |
 
 ---
