--- a/_posts/02_DataStructures/2024-02-21-前缀和数组.md
+++ b/_posts/02_DataStructures/2024-02-21-前缀和数组.md
@@ -163,9 +163,10 @@ $$
 
 ## 经典例题
 
-| 题号  | 题目                                                                       | 标签              |
-| --- | ------------------------------------------------------------------------ | --------------- |
-| 303 | [区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/) | 前缀和 / 模板题       |
-| 560 | [和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)         | 前缀和 / 哈希表 / 提升题 |
+| 题号  | 题目                                                                       | 标签                 |
+| --- | ------------------------------------------------------------------------ |--------------------|
+| 303 | [区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/) | 前缀和 / 模板题          |
+| 560 | [和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)         | 前缀和 / 哈希表 / 提升题    |
+| 1292 | [元素和小于等于阈值的正方形的最大边长](https://leetcode.cn/problems/maximum-side-length-of-a-square-with-sum-less-than-or-equal-to-threshold/) | 二维前缀和 / 暴力枚举 / 模板题 |
 
 ---
